//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package chrono;

message DateTime {
  int64 secs = 1;
  uint32 ns = 2;
}

message TimeDelta {
  int64 secs = 1;
  uint32 ns = 2;
}

